tests/lang/compile_fail/generic_impl_body_type_mismatch.kojs
struct Box<T>
  value: T
end

extend Box<T>
  fn typo(self) -> Int
    "not an int"
  end
end

b = Box{value: 1}
b.typo().print()
